# TStickers

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  move_webp_stickers.py  pyproject.toml  requirements.txt
.github/workflows/: mirror-to-codeberg.yaml  test-lint.yaml
DOCS/: README.md
DOCS/tstickers/: animate.md  caching.md  convert.md  downloader.md  index.md  main.md  module.md
documentation/reference/: README.md
documentation/reference/tstickers/: caching.md  cli.md  convert.md  convert_pyrlottie.md  convert_rlottie_python.md  downloader.md  index.md  manager.md  module.md
documentation/tutorials/: README.md  backends.md  getting-started.md
readme-assets/icons/: TStickers.xcf
tests/: test_main.py
tests/data/donutthedog/tgs/: 1353+waving_hand.tgs  1354+face_blowing_a_kiss.tgs  1355+thumbs_up.tgs  1356+face_with_tears_of_joy.tgs  1357+OK_hand.tgs  1362+partying_face.tgs  1363+thumbs_down.tgs  1366+eyes.tgs  1368+angry_face.tgs  1373+flexed_biceps.tgs  1375+rose.tgs  1377+man_gesturing_NO.tgs  3723+star-struck.tgs  3729+smiling_face_with_sunglasses.tgs  3733+thinking_face.tgs  3734+pile_of_poo.tgs  3735+loudly_crying_face.tgs  3736+sleepy_face.tgs  3744+fearful_face.tgs  3749+red_heart.tgs  3751+smiling_face_with_hearts.tgs  3753+smiling_face_with_horns.tgs  3758+victory_hand.tgs  3760+smiling_face_with_open_hands.tgs  3765+face_with_crossed-out_eyes.tgs  3767+face_with_tongue.tgs  3768+pleading_face.tgs  3771+hot_face.tgs  3772+sleeping_face.tgs  3773+flexed_biceps.tgs  3774+thumbs_up.tgs
tstickers/: __init__.py  __main__.py  animate.py  caching.py  cli.py  convert.py  convert_pyrlottie.py  convert_rlottie_python.py  downloader.py  main.py  manager.py
