[project]
name = "tstickers"
version = "2025"
description = "Download sticker packs from Telegram"
authors = [{ name = "FredHappyface" }]
requires-python = ">=3.9"
readme = "README.md"
license = "mit"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities",
	"Topic :: Multimedia :: Graphics",
]
dependencies = [
	"emoji>=2.14.1",
	"loguru>=0.7.3",
	"pillow>=10.4.0",
	"requests>=2.32.3",
	"requests-cache>=1.2.1",
	"rlottie-python>=1.3.6",
]

[project.optional-dependencies]
pyrlottie = ["pyrlottie<2026,>=2024.0.1"]

[project.urls]
Homepage = "https://github.com/FHPythonUtils/TStickers"
Repository = "https://github.com/FHPythonUtils/TStickers"
Documentation = "https://github.com/FHPythonUtils/TStickers/blob/master/README.md"

[project.scripts]
tstickers = "tstickers:cli"

[dependency-groups]
dev = [
	"coverage>=7.6.12",
	"handsdown>=2.1.0",
	"pyright>=1.1.394",
	"pytest>=8.3.4",
	"ruff>=0.9.6",
	"safety>=3.3.0",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
	"ANN101", # type annotation for self in method
	"COM812", # enforce trailing comma
	"D2",     # pydocstyle formatting
	"ISC001",
	"N",      # pep8 naming
	"PLR09",  # pylint refactor too many
	"TCH",    # type check blocks
	"W191",   # ignore this to allow tabs
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = ["D", "S101", "E402"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all" # Disallow all relative imports.

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true
line-ending = "lf"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.coverage.run]
branch = true

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
	py313
	py312
	py311
	py310
	py39

[testenv]
deps =
	pytest
commands = pytest tests
"""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
